# MindSQL

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql.yml
mindsql/_helper/: helper.py
mindsql/_utils/: __init__.py  constants.py  logger.py  prompts.py
mindsql/core/: __init__.py  mindsql_core.py
mindsql/databases/: __init__.py  idatabase.py  mysql.py  postgres.py  sqlite.py  sqlserver.py
mindsql/llms/: __init__.py  anthropic.py  googlegenai.py  huggingface.py  illm.py  llama.py  ollama.py  open_ai.py
mindsql/vectorstores/: __init__.py  chromadb.py  faiss_db.py  ivectorstore.py
tests/: ollama_test.py  sqlserver_test.py  test.py
