[tool.poetry]
name = "mindsql"
version = "0.2.01"
description = "Text-2-SQL made easy in just a few lines of python."
authors = ["Mindinventory <info@mindinventory.com>"]
readme = "README.md"
repository = "https://github.com/Mindinventory/MindSQL"
homepage = "https://www.mindinventory.com/text-to-sql-mindsql.php"
license = "GPL-3.0-or-later"
keywords = ["Text2SQL", "data", "text to sql", "Text-to-SQL", "RAG", "LLM", "NLP"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.4.22"
pandas = "2.2.0"
plotly = "5.19.0"
mysql-connector-python = "^8.3.0"
google-generativeai="0.3.2"
llama-cpp-python = "0.2.47"
openai = "^1.12.0"
sqlparse = "^0.4.4"
numpy = "^1.26.4"
sentence-transformers = "^2.3.1"
psycopg2-binary = "^2.9.9"
faiss-cpu = "^1.8.0"
pysqlite3-binary = "^0.5.2.post3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
